# iRRT_CUpId_planner

./: LICENSE
myplanner_interface/: my_planner_interface_plugin_description.xml  package.xml  plugin_description.xml
myplanner_interface/include/my_planner_interface/: my_interface.h  my_planning_context.h
myplanner_interface/src/: my_planner_interface.cpp  my_planner_planning_context.cpp  my_planner_plugin.cpp
myplanner_motion_planner/: CMakeLists.txt  myplanner_motion_planner_plugin_description.xml  package.xml
myplanner_motion_planner/include/my_motion_planner/: iRRTCUpId_planner.h  my_parameters.h  my_planner.h  my_trajectory.h
myplanner_motion_planner/src/: best_ppo_sampler_model.onnx  best_ppo_sampler_model_quantized.onnx  iRRTCUpId_planner.cpp  my_parameters.cpp  my_planner.cpp  my_trajectory.cpp
myplanner_planner_adapter/: package.xml
myplanner_planner_adapter/src/: my_planner_adapter.cpp
